# loci

./: CMakeLists.txt  LICENSE  README.md
examples/example1/: CMakeLists.txt  loci_app  main.c
examples/example2/: CMakeLists.txt  Makefile  loci_app  main.c
examples/example3/: CMakeLists.txt  main.c  snake.c  snake.h
src/core/: CMakeLists.txt  loci_acceleration.c  loci_acceleration.h  loci_buffer.c  loci_buffer.h  loci_camera.c  loci_camera.h  loci_commandBuffer.c  loci_commandBuffer.h  loci_commandPool.c  loci_commandPool.h  loci_core.c  loci_core.h  loci_descriptorPool.c  loci_descriptorPool.h  loci_descriptorSet.c  loci_descriptorSet.h  loci_device.c  loci_device.h  loci_eye.c  loci_eye.h  loci_fence.c  loci_fence.h  loci_global.h  loci_image.c  loci_image.h  loci_input.c  loci_input.h  loci_instance.c  loci_instance.h  loci_physicalDevice.c  loci_physicalDevice.h  loci_pipeline.c  loci_pipeline.h  loci_queue.c  loci_queue.h  loci_semaphore.c  loci_semaphore.h  loci_shader.c  loci_shader.h  (+12 more)
src/core/flecs/: CMakeLists.txt  Makefile
src/ecs/: CMakeLists.txt  loci_animation.c  loci_animation.h  loci_bone.c  loci_bone.h  loci_channel.c  loci_channel.h  loci_ecs.h  loci_material.c  loci_material.h  loci_mesh.c  loci_mesh.h  loci_pointLight.c  loci_pointLight.h  loci_scene.c  loci_scene.h  loci_skeleton.c  loci_skeleton.h  loci_texture.c  loci_texture.h  loci_transform.c  loci_transform.h
src/gltf/: CMakeLists.txt  loci_gltf.c  loci_gltf.h
src/shaders/: Makefile  chitReflectionShader.rchit  chitReflectionShader.spv  chitShader.rchit  chitShader.spv  chitShadowShader.rchit  chitShadowShader.spv  genShader.rgen  genShader.spv  missReflectionShader.rmiss  missShader.rmiss  missShader.spv  missShadowShader.rmiss  skeletonShader.comp  skeletonShader.spv  structs.glsl
src/shapes/: CMakeLists.txt  loci_cube.c  loci_cube.h  loci_sphere.c  loci_sphere.h  loci_tetra.c  loci_tetra.h
